--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li> <a href = "#">Contact</a></li>
             </ul>
         </nav>
-
+    </header>
 </header>
 
 <main class="main">
@@ -25,8 +25,8 @@
           <div class ="container">
               <h2 class ="welcome__heading">Your personal diary</h2>
               <div class="welcome__links">
-                  <a href = "#">Contact</a>
-                  <a href = "#">Contact</a>
+                  <a href ="#"class="link-primary">Contact</a>
+                  <a href = "#" class="link">Contact</a>
               </div>
           </div>
 
