Added the main part

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         <nav class="header__nav">
             <ul>
-                <li> <a href = "#">Home</a></li>
-                <li> <a href = "#">Contact</a></li>
+                <li> <a href = "#">About us</a></li>
+                <li> <a href = "#">Support</a></li>
             </ul>
         </nav>
     </header>
@@ -25,15 +25,91 @@
           <div class ="container">
               <h2 class ="welcome__heading">Your personal diary</h2>
               <div class="welcome__links">
-                  <a href ="#"class="link-primary">Contact</a>
-                  <a href = "#" class="link">Contact</a>
+                  <a href ="#" class="link-primary">Sing in</a>
+                  <a href ="#" class="link">Sign up</a>
               </div>
           </div>
+      </section>
+
+    <section class="about common-section ">
+        <div class="container">
+            <div class="title-wrapper">
+                <h3 class="title">What we do</h3>
+
+            </div>
+            <div class="cards-wrapper">
+                <div class="card">
+                    <img src="img/img_5.png" alt="icon">
+                </div>
+
+                <div class="card">
+                    <img src="img/img_6.png" alt="icon">
+                </div>
 
 
-</section>
+            </div>
+        </div>
+    </section>
+
+    <section class="catalog common-section">
+        <div class="container">
+            <div class="title-wrapper">
+                <h3 class="title">Catalog</h3>
+
+            </div>
+            <div class="cards-wrapper">
+                <div class="card">
+                    <img src="img/img_11.png" alt="img">
+                    <h4> Product1 </h4>
+                    <a href="#" class="Link">Buy now</a>
+
+                </div>
+
+                <div class="card">
+                    <img src="img/img_12.png" alt="img">
+                    <h4> Product2 </h4>
+                    <a href="#" class="Link">Buy now</a>
+                </div>
+
+                <div class="card">
+                    <img src="img/img_10.png" alt="img">
+                    <h4> Product3 </h4>
+                    <a href="#" class="Link">Buy now</a>
+                </div>
+                <div class="card">
+                    <img src="img/img_15.png" alt="img">
+                    <h4> Product4 </h4>
+                    <a href="#" class="Link">Buy now</a>
+                </div>
+                <div class="card">
+                    <img src="img/img_16.png" alt="img">
+                    <h4> Product5 </h4>
+                    <a href="#" class="Link">Buy now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="tab-section common-section">
+        <div class="container">
+            <h3 class="title">Blog</h3>
+        </div>
+        <div class="tabs">
+            <div class="tabs__nav">
+                <button  class=" active" type="button">Tab Button 1 </button>
+                <button type="button">Tab Button 2 </button>
+                <button type="button">Tab Button 3 </button>
+            </div>
+            <div class ="tabs__item">
+                <img src = "img/img_8.png" alt="">
+
+            </div>
+        </div>
 </main>
 
+<footer class="footer">
+
+</footer>
 </body>
 
 </html>
