--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>So Be</title>
     <link rel = "stylesheet" href="reset.css">
     <link rel = "stylesheet" href="style.css">
+
 </head>
 <body>
 <header class ="header">
@@ -31,15 +32,15 @@
           </div>
       </section>
 
-    <section class="about common-section ">
+    <section class="about common-section  ">
         <div class="container">
             <div class="title-wrapper">
-                <h3 class="title">What we do</h3>
+                <h3 class="title">Print version</h3>
 
             </div>
             <div class="cards-wrapper">
                 <div class="card">
-                    <img src="img/img_5.png" alt="icon">
+                    <img src="img/img_27.png" alt="icon">
                 </div>
 
                 <div class="card">
@@ -51,7 +52,7 @@
         </div>
     </section>
 
-    <section class="catalog common-section">
+    <section class="catalog common-section ">
         <div class="container">
             <div class="title-wrapper">
                 <h3 class="title">Catalog</h3>
@@ -59,33 +60,29 @@
             </div>
             <div class="cards-wrapper">
                 <div class="card">
-                    <img src="img/img_11.png" alt="img">
-                    <h4> Product1 </h4>
+                    <img src="img/img_33.png" alt="img">
+                    <h4> Diary 1.0</h4>
                     <a href="#" class="Link">Buy now</a>
 
                 </div>
 
                 <div class="card">
-                    <img src="img/img_12.png" alt="img">
-                    <h4> Product2 </h4>
+                    <img src="img/img_32.png" alt="img">
+                    <h4> Diary 2.0 </h4>
                     <a href="#" class="Link">Buy now</a>
                 </div>
 
                 <div class="card">
-                    <img src="img/img_10.png" alt="img">
-                    <h4> Product3 </h4>
+                    <img src="img/img_31.png" alt="img">
+                    <h4> Diary 3.0 </h4>
                     <a href="#" class="Link">Buy now</a>
                 </div>
                 <div class="card">
-                    <img src="img/img_15.png" alt="img">
-                    <h4> Product4 </h4>
+                    <img src="img/img_29.png" alt="img">
+                    <h4> Calendar 2025 </h4>
                     <a href="#" class="Link">Buy now</a>
                 </div>
-                <div class="card">
-                    <img src="img/img_16.png" alt="img">
-                    <h4> Product5 </h4>
-                    <a href="#" class="Link">Buy now</a>
-                </div>
+
             </div>
         </div>
     </section>
@@ -96,20 +93,59 @@
         </div>
         <div class="tabs">
             <div class="tabs__nav">
-                <button  class=" active" type="button">Tab Button 1 </button>
-                <button type="button">Tab Button 2 </button>
-                <button type="button">Tab Button 3 </button>
+                <button  class=" active" type="button">Instagram</button>
+                <button type="button">Reviews</button>
+                <button type="button">Coming soon </button>
+            </div>
+
+            <div class ="tabs__item">
+                <img src = "img/img_8.png" alt="" class="tagImage">
+            </div>
+
+
+            <div class ="tabs__item">
+                <img src = "img/img_26.png" alt="" class="tagImage">
+
             </div>
             <div class ="tabs__item">
-                <img src = "img/img_8.png" alt="">
+                <img src = "img/img_28.png" alt="" class="tagImage">
 
             </div>
         </div>
+    </section>
 </main>
 
-<footer class="footer">
+<footer class="footer ">
+    <div class="footer__desc">
+        <div class="container footer__desc-container">
+            <div class="footer__about">
+                <h4> About</h4>
+            </div>
+            <div class="footer__social">
+                <h4> Social</h4>
+            </div>
+            <div class="footer__links">
+                <h4> Links</h4>
+                <ul>
+                    <li>
+                        <img src ="img/img_17.png" alt="Instagram">
+                        <a href ="#">Instagram</a>
+                        </li>
+                    <li>
+                        <img src ="img/img_19.png" alt="Facebook">
+                        <a href ="#">Facebook</a>
+                        </li>
+                    <li>
+                        <img src ="img/img_18.png" alt="Telegram">
+                        <a href ="#">Telegram</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
 </footer>
+<script src="script.js"></script>
 </body>
 
 </html>
